# caffeine-hal-ports

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REVIEW.md  SKILL.md  plan.md  test_glob.cmake
.artifacts/: stm32f4-peripherals.md
.github/workflows/: ci.yml
cmake/: caffeine-hal-portsConfig.cmake.in
cmake/ports/gigadevice/: gd32v.cmake
cmake/ports/gigadevice/gd32v/: gd32v.cmake  gd32vf103.cmake
cmake/ports/linux/: linux.cmake
cmake/ports/mock/: mock-tests.cmake
cmake/ports/posix/: linux.cmake
cmake/ports/posix/linux/: linux.cmake
cmake/ports/stm32/: stm32c0.cmake  stm32f0.cmake  stm32f1.cmake  stm32f2.cmake  stm32f3.cmake  stm32f4.cmake  stm32f7.cmake  stm32g0.cmake  stm32g4.cmake  stm32h5.cmake  stm32h7.cmake  stm32l0.cmake  stm32l1.cmake  stm32l4.cmake  stm32l5.cmake  stm32u5.cmake  stm32wb.cmake  stm32wba.cmake  stm32wl.cmake
cmake/ports/stm32/stm32c0/: stm32c0.cmake
cmake/ports/stm32/stm32f0/: stm32f0.cmake
cmake/ports/stm32/stm32f1/: stm32f1.cmake
cmake/ports/stm32/stm32f2/: stm32f2.cmake
cmake/ports/stm32/stm32f3/: stm32f3.cmake
cmake/ports/stm32/stm32f4/: stm32f4.cmake  stm32f407vgtx.cmake  stm32f417vgtx.cmake
cmake/ports/stm32/stm32f7/: stm32f7.cmake
cmake/ports/stm32/stm32g4/: stm32g4.cmake
cmake/ports/stm32/stm32h5/: stm32h5.cmake
cmake/ports/stm32/stm32h7/: stm32h7.cmake
cmake/ports/stm32/stm32l0/: stm32l0.cmake
cmake/ports/stm32/stm32l1/: stm32l1.cmake
cmake/ports/stm32/stm32l4/: stm32l4.cmake
cmake/ports/stm32/stm32wb/: stm32wb.cmake
cmake/ports/stm32/stm32wl/: stm32wl.cmake
cmake/ports/template/: compliance.cmake
cmake/ports/template/template/: template.cmake
cmake/presets/: base.json
cmake/presets/gigadevice/: gd32v.json
cmake/presets/mock/: tests.json
cmake/presets/posix/: linux.json
cmake/presets/stm32/: stm32f4.json
cmake/presets/template/: compliance.json
cmake/toolchains/: arm-gcc.cmake  riscv-gcc.cmake
config/coding/: .clang-tidy
linker/: STM32F407VGTX_FLASH.ld
scripts/: build-local.sh  port_to_new_mcu.py  requirements.txt
scripts/lib/: base_porter.py  stm32_porter.py
scripts/lib/templates/stm32/: hal_conf.h.in.template  port.cmake.template  presets.json.template
src/mock/: cfn_hal_gpio_port.h  cfn_hal_uart_port.h
src/posix/linux/: cfn_hal_uart.c  cfn_hal_uart_port.h
src/stm32/: PORT_ST_SKILL.md  cfn_hal_stm32_error.h
src/stm32/stm32f4/: cfn_hal_adc_port.c  cfn_hal_adc_port.h  cfn_hal_can_port.c  cfn_hal_can_port.h  cfn_hal_clock_port.c  cfn_hal_clock_port.h  cfn_hal_comp_port.c  cfn_hal_comp_port.h  cfn_hal_crypto_port.c  cfn_hal_crypto_port.h  cfn_hal_dac_port.c  cfn_hal_dac_port.h  cfn_hal_dma_port.c  cfn_hal_dma_port.h  cfn_hal_eth_port.c  cfn_hal_eth_port.h  cfn_hal_gpio_port.c  cfn_hal_gpio_port.h  cfn_hal_i2c_port.c  cfn_hal_i2c_port.h  cfn_hal_i2s_port.c  cfn_hal_i2s_port.h  cfn_hal_irq_port.c  cfn_hal_irq_port.h  cfn_hal_nvm_port.c  cfn_hal_nvm_port.h  cfn_hal_pwm_port.c  cfn_hal_pwm_port.h  cfn_hal_qspi_port.c  cfn_hal_qspi_port.h  cfn_hal_rtc_port.c  cfn_hal_rtc_port.h  cfn_hal_sdio_port.c  cfn_hal_sdio_port.h  cfn_hal_spi_port.c  cfn_hal_spi_port.h  cfn_hal_stm32_error.h  cfn_hal_timer_port.c  cfn_hal_timer_port.h  cfn_hal_uart_port.c  (+7 more)
src/template/: cfn_hal_adc_port.c  cfn_hal_adc_port.h  cfn_hal_can_port.c  cfn_hal_can_port.h  cfn_hal_clock_port.c  cfn_hal_clock_port.h  cfn_hal_comp_port.c  cfn_hal_comp_port.h  cfn_hal_crypto_port.c  cfn_hal_crypto_port.h  cfn_hal_dac_port.c  cfn_hal_dac_port.h  cfn_hal_dma_port.c  cfn_hal_dma_port.h  cfn_hal_eth_port.c  cfn_hal_eth_port.h  cfn_hal_gpio_port.c  cfn_hal_gpio_port.h  cfn_hal_i2c_port.c  cfn_hal_i2c_port.h  cfn_hal_i2s_port.c  cfn_hal_i2s_port.h  cfn_hal_irq_port.c  cfn_hal_irq_port.h  cfn_hal_nvm_port.c  cfn_hal_nvm_port.h  cfn_hal_pwm_port.c  cfn_hal_pwm_port.h  cfn_hal_qspi_port.c  cfn_hal_qspi_port.h  cfn_hal_rtc_port.c  cfn_hal_rtc_port.h  cfn_hal_sdio_port.c  cfn_hal_sdio_port.h  cfn_hal_spi_port.c  cfn_hal_spi_port.h  cfn_hal_timer_port.c  cfn_hal_timer_port.h  cfn_hal_uart_port.c  cfn_hal_uart_port.h  (+6 more)
src/template/template/: cfn_hal_adc_port.c  cfn_hal_can_port.c  cfn_hal_clock_port.c  cfn_hal_comp_port.c  cfn_hal_crypto_port.c  cfn_hal_dac_port.c  cfn_hal_dac_port.h  cfn_hal_dma_port.c  cfn_hal_eth_port.c  cfn_hal_eth_port.h  cfn_hal_gpio_port.c  cfn_hal_i2c_port.c  cfn_hal_i2c_port.h  cfn_hal_i2s_port.c  cfn_hal_i2s_port.h  cfn_hal_irq_port.c  cfn_hal_irq_port.h  cfn_hal_nvm_port.c  cfn_hal_nvm_port.h  cfn_hal_pwm_port.c  cfn_hal_pwm_port.h  cfn_hal_qspi_port.c  cfn_hal_rtc_port.c  cfn_hal_sdio_port.c  cfn_hal_spi_port.c  cfn_hal_spi_port.h  cfn_hal_timer_port.c  cfn_hal_uart_port.c  cfn_hal_usb_port.c  cfn_hal_wdt_port.c
tests/: CMakeLists.txt  compliance.c
tests/stm32/stm32c0/: test_stm32c0_uart.cpp
tests/stm32/stm32f0/: test_stm32f0_uart.cpp
tests/stm32/stm32f1/: test_stm32f1_uart.cpp
tests/stm32/stm32f2/: test_stm32f2_uart.cpp
tests/stm32/stm32f3/: test_stm32f3_uart.cpp
tests/stm32/stm32f4/: test_stm32f4_uart.cpp
tests/stm32/stm32f4/mocks/: core_cm4.h  hal_mock.c  mock_stm32f4_defines.h  mock_stm32f4_hal_base.cpp  mock_stm32f4_hal_base.hpp  mock_stm32f4_hal_dma.cpp  mock_stm32f4_hal_dma.hpp  mock_stm32f4_hal_uart.cpp  mock_stm32f4_hal_uart.hpp
tests/stm32/stm32f4/src/: test_stm32f4_uart.cpp
tests/stm32/stm32f7/: test_stm32f7_uart.cpp
tests/stm32/stm32g0/: test_stm32g0_uart.cpp
tests/stm32/stm32g4/: test_stm32g4_uart.cpp
tests/stm32/stm32h5/: test_stm32h5_uart.cpp
tests/stm32/stm32h7/: test_stm32h7_uart.cpp
tests/stm32/stm32l0/: test_stm32l0_uart.cpp
tests/stm32/stm32l1/: test_stm32l1_uart.cpp
tests/stm32/stm32l4/: test_stm32l4_uart.cpp
tests/stm32/stm32l5/: test_stm32l5_uart.cpp
tests/stm32/stm32u5/: test_stm32u5_uart.cpp
tests/stm32/stm32wb/: test_stm32wb_uart.cpp
tests/stm32/stm32wba/: test_stm32wba_uart.cpp
tests/stm32/stm32wl/: test_stm32wl_uart.cpp
